FIX bug contraste texte

--- a/assets/style.css
+++ b/assets/style.css
@@ -87,6 +87,7 @@ body {
 }
 #about-me p {
 	width: 80%;
+	font-size: 14px;
 }
 
 #gallery {
@@ -101,7 +102,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #9e964b;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
